# personal-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/exif_extractor/: server.py
src/hello_server/: __init__.py  server.py
